# mal-api-rs

./: Cargo.toml  README.md
src/: api.rs  api_request.rs  auth.rs  lib.rs  objects.rs
src/api/: anime.rs  forum.rs  manga.rs  user.rs  user_animelist.rs  user_mangalist.rs
