[package]
name = "mal-api"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
thiserror = "1.0.59"
oauth2 = { version = "4.4.2", features = ["pkce-plain"] }
reqwest = { version = "0.12.4", features = ["json"] }
strum = { version = "0.26.2", features = ["derive", "derive"] }
derive_more = "0.99.17"
const_format = "0.2.32"
chrono = { version = "0.4.38", features = ["serde"] }
tokio = { version = "1.37.0", features = ["sync", "rt-multi-thread"] }
serde_with = "3.7.0"
serde_qs = "0.13.0"
itertools = "0.12.1"
tracing = "0.1.40"
