[package]
name = "myanimelist"
version = "0.2.3"
edition = "2021"
authors = ["Cherry"]
license = "MIT"
description = "A complete async/sync typed MyAnimeList v2 api"
repository = "https://github.com/MolotovCherry/mal-api-rs"
categories = ["api-bindings"]
keywords = ["myanimelist", "mal", "api", "anime", "manga"]

[features]
blocking = []

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
oauth2 = { version = "5.0", features = ["pkce-plain"] }
reqwest = { version = "0.13.2", features = ["json", "form"] }
strum = { version = "0.28.0", features = ["derive", "derive"] }
derive_more = { version = "2.1.1", features = ["display"] }
const_format = "0.2.35"
chrono = { version = "0.4.44", features = ["serde"] }
tokio = { version = "1.49.0", features = ["sync", "rt-multi-thread"] }
serde_with = "3.17.0"
serde_qs = "1.0"
itertools = "0.14"
tracing = "0.1.44"

[package.metadata.docs.rs]
all-features = true
